--- a/Maps.html
+++ b/Maps.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
     <!--Linking the external css to HTML-->
-    <link rel="stylesheet" href="CSS/external-stylesheet.css"/>
+    <link rel="stylesheet" href="css/external-stylesheet.css"/>
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, user scalable=yes">
